[package]
name = "anonima_doksanto"
version = "0.1.0"
authors = ["timcryt <tymcrit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22"
rand = "0.8"
regex = "1.5"
zip = "0.5"
lazy_static = "1.4"
once_cell = "1.8"
ron = "0.6"
serde_derive = "1"
serde = "1"